# practical-sa

./: .gitignore  Makefile.am  README.md  configure.ac
examples/: hello.pr
include/: defines.h  practical-errors.h  practical-sa.h  slice.h  typed.h
include/practical/: defines.h  errors.h  practical.h  slice.h  typed.h
lib/: .gitignore  Makefile.am  asserts.h  ast.cpp  ast.h  ast_nodes.cpp  ast_nodes.h  casts.cpp  casts.h  codegen.cpp  codegen.h  codegen_operators.cpp  codegen_operators.h  compile-practical.h  defines.h  dummy_codegen_impl.cpp  dummy_codegen_impl.h  exact_int.h  exact_int_ut.cpp  expected_type.h  expression.cpp  expression.h  fd.h  full_range_int.cpp  full_range_int.h  full_range_int_ut.cpp  lookup_context.cpp  lookup_context.h  mmap.h  nocopy.h  old.cpp  operators.cpp  operators.h  parser.cpp  parser.h  parser_internal.cpp  parser_internal.h  practical-errors.cpp  practical-sa.cpp  practical-sa.h  (+13 more)
lib/ast/: arrays.h  ast.cpp  ast.h  bool_value_range.h  cast_chain.cpp  cast_chain.h  cast_op.cpp  cast_op.h  casts.cpp  casts.h  compound_statement.cpp  compound_statement.h  conditional_statement.cpp  conditional_statement.h  decay.cpp  decay.h  delayed_definitions.h  expected_result.cpp  expected_result.h  expression.cpp  expression.h  function.cpp  function.h  hash_modifiers.h  lookup_context.cpp  lookup_context.h  mangle.cpp  mangle.h  module.cpp  module.h  pointers.h  signed_int_value_range.cpp  signed_int_value_range.h  statement.cpp  statement.h  statement_list.cpp  statement_list.h  static_type.cpp  static_type.h  struct.cpp  (+10 more)
lib/ast/expression/: address_of.cpp  address_of.h  base.cpp  base.h  binary_op.cpp  binary_op.h  cast_op.cpp  cast_op.h  compound_expression.cpp  compound_expression.h  conditional_expression.cpp  conditional_expression.h  dereference.cpp  dereference.h  expression_metadata.h  function_call.cpp  function_call.h  identifier.cpp  identifier.h  literal.cpp  literal.h  overload_resolver.cpp  overload_resolver.h  unary_op.cpp  unary_op.h
lib/ast/operators/: algebraic_int.cpp  algebraic_int.h  boolean.cpp  boolean.h  helper.cpp  helper.h  plus.cpp  plus.h
lib/parser/: base.h  identifier.cpp  identifier.h  literal_bool.cpp  literal_bool.h  literal_int.cpp  literal_int.h  literal_string.cpp  literal_string.h  module.cpp  module.h  struct.cpp  struct.h  type.cpp  type.h  variable_definition.cpp  variable_definition.h
lib/ut/: dirscan.h
tests/tokenizer/: helloworld  helloworld.ut  integer_literals  operators  operators.ut  string_naked_newline_error  string_naked_newline_error.ut  string_unterminated_error  string_unterminated_error.ut  strings  strings.ut  whitespaces  whitespaces.ut
